name: platformer
version: 0.1.0.0
synopsis: Impulse-based physics library for 2D platformers
-- description: 
homepage: https://github.com/jxv/platformer
license: MIT
license-file: LICENSE
author: Joe Vargas
maintainer: Joe Vargas
copyright: (c) 2015
category: Game
build-type: Simple
cabal-version: >=1.10

flag demo
    description: Build Demo
    default: False

library
    exposed-modules:
        Platformer
        Platformer.Types
        Platformer.Class
        Platformer.Util
    other-modules: 
        Platformer.Math
        Platformer.Imports
    default-extensions:
        RecordWildCards
        TemplateHaskell
        KindSignatures
        Rank2Types
        MultiWayIf
    build-depends:
        base,
        vector,
        lens,
        linear,
        containers,
        mtl,
        safe,
        hydrogen-multimap,
        QuadTree,
        primitive
    hs-source-dirs: src
    default-language: Haskell2010

executable demo
    main-is: Main.hs
    default-extensions:
        RecordWildCards
        TemplateHaskell
        KindSignatures
        OverloadedStrings
        LambdaCase
        Rank2Types
        MultiWayIf
    if flag(demo)
        build-depends:
            base,
            vector,
            containers,
            sdl2,
            transformers,
            lens,
            linear,
            StateVar,
            data-default,
            mtl,
            platformer
    else
        buildable: False
    hs-source-dirs: demo
    default-language: Haskell2010
